modest fixes [TASK-921] - suppress results > 10000 - better handling of import tab when not-importable - info button (still needs rewriting) behind text - column values should be clickable, not entire cell

--- a/src/plugin/modules/components/search-result.css
+++ b/src/plugin/modules/components/search-result.css
@@ -83,6 +83,7 @@
     width: 10em;
     padding: 4px;
     background-color: #FFF;
+    z-index: 10;
 }
 
 .kb-tooltip.-hidden {
